[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/robot/robot_shoot.png" type="Texture" id=1]
[ext_resource path="res://Robot_Shoot.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 0.0

[node name="Robot_Shoot" type="Area2D" groups=["robot_shoot"]]
position = Vector2( 0, 18 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 1 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Robot_Shoot_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
